--- a/modulo2/desafios/d10/index.html
+++ b/modulo2/desafios/d10/index.html
@@ -16,10 +16,9 @@
         <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</p>
     </header>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="noticias.html">Notícias</a>
-        <a href="curiosidades.html">Curiosidades</a>
-        <a href="faleconosco.html">Fale conosco</a>
+        <a href="#">Home</a>
+        <a href="#">Notícias</a>
+        <a href="#">Contato</a>
     </nav>
     <main>
         <article>
@@ -74,41 +73,39 @@
             <div id="video">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-
-            <aside>
-                <h3>Quer aprender mais?</h3>
-                <p>
-                Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem
-                alfabética a partir da versão 1.5 até a 9.0.
-                </p>
-                <ul>
-                    <li>1.5 - <abbr title="Bolinho">Cupcake</abbr></li>
-                    <li>1.6 - <abbr title="Rosquinha">Donut</abbr></li>
-                    <li>3.0 - <abbr title="Bomba de chocolate">Eclair</abbr></li>
-                    <li>2.2 - <abbr title="Iogurte Congelado">Froyo</abbr></li>
-                    <li>2.3 - <abbr title="Pão de gengibre">Gingerbread</abbr></li>
-                    <li>3.0 - <abbr title="Favo de mel">Honeycomb</abbr></li>
-                    <li>4.0 - <abbr title="Sorvete">Ice Cream Sandwic</abbr></li>
-                    <li>4.1 - <abbr title="Bala de goma">Jelly Bean</abbr></li>
-                    <li>4.4 - <abbr title="Doce marca Kitkat">KitKat</abbr></li>
-                    <li>5.0 - <abbr title="Pirulito">Lolipop</abbr></li>
-                    <li>6.0 - <abbr title="Doce marshmallow">Marshmallow</abbr></li>
-                    <li>7.0 - <abbr title="Torrone">Nougat</abbr></li>
-                    <li>8.0 - <abbr title="Biscoito Oreo">Oreo</abbr></li>
-                    <li>9.0 - <abbr title="Torta">Pie</abbr></li>
-                </ul>
-                <p>
-                    Infelizmente, o <span class="palavra">Android Q</span> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar
-                    numerações, o que deu origem ao <span class="palavra">Android 10</span>.
-                    Acesse aqui o site <a href="#">Android History &#x1F4CE</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o
-                    sistema Android.
-                </p>
-            </aside>
-
             <p>
             Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <span class="palavra">Android</span> e seu simpático mascote.
             </p>
         </article>
+        <aside>
+            <h3>Quer aprender mais?</h3>
+            <p>
+            Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem
+            alfabética a partir da versão 1.5 até a 9.0.
+            </p>
+            <ul>
+                <li>1.5 - <abbr title="Bolinho">Cupcake</abbr></li>
+                <li>1.6 - <abbr title="Rosquinha">Donut</abbr></li>
+                <li>3.0 - <abbr title="Bomba de chocolate">Eclair</abbr></li>
+                <li>2.2 - <abbr title="Iogurte Congelado">Froyo</abbr></li>
+                <li>2.3 - <abbr title="Pão de gengibre">Gingerbread</abbr></li>
+                <li>3.0 - <abbr title="Favo de mel">Honeycomb</abbr></li>
+                <li>4.0 - <abbr title="Sorvete">Ice Cream Sandwic</abbr></li>
+                <li>4.1 - <abbr title="Bala de goma">Jelly Bean</abbr></li>
+                <li>4.4 - <abbr title="Doce marca Kitkat">KitKat</abbr></li>
+                <li>5.0 - <abbr title="Pirulito">Lolipop</abbr></li>
+                <li>6.0 - <abbr title="Doce marshmallow">Marshmallow</abbr></li>
+                <li>7.0 - <abbr title="Torrone">Nougat</abbr></li>
+                <li>8.0 - <abbr title="Biscoito Oreo">Oreo</abbr></li>
+                <li>9.0 - <abbr title="Torta">Pie</abbr></li>
+            </ul>
+            <p>
+                Infelizmente, o <span class="palavra">Android Q</span> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar
+                numerações, o que deu origem ao <span class="palavra">Android 10</span>.
+                Acesse aqui o site <a href="#">Android History &#x1F4CE</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o
+                sistema Android.
+            </p>
+        </aside>
     </main>
 
     <footer>
