Atualização de ex e desafios
Melhorando a descrição dos exercícios e desafios

--- a/modulo1/exercicios/EX 015 CSS Local/index.html
+++ b/modulo1/exercicios/EX 015 CSS Local/index.html
@@ -32,7 +32,8 @@
 
     </style>
 </head>
-<body> 
+<body>
+    <h1>CSS local</h1> 
     <h1>Hellou</h1>
     <h2>Lets talk</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic aperiam optio tenetur quam voluptate neque eveniet odit, autem perspiciatis quidem quos? Quisquam laudantium a temporibus laboriosam possimus natus incidunt et.</p>
