--- a/modulo2/exercícios/ex016/cor01.html
+++ b/modulo2/exercícios/ex016/cor01.html
@@ -7,7 +7,7 @@
     <title>Cores em CSS</title>
 </head>
 <body>
-
+    <h1>Representando a mesma cor com diferentes tipos de código</h1>
     <!--Representação por nome-->
     <h2 style="background-color:blue; color:white;">Exemplo de cores</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor reiciendis esse beatae nisi aut dolorem ipsa quo minima autem vero facilis quasi asperiores enim a quos sit, nam nobis libero.</p>
