--- a/modulo2/exercícios/ex016/cor02.html
+++ b/modulo2/exercícios/ex016/cor02.html
@@ -12,7 +12,7 @@
         }
         body{
             /*radial-gradiente, to top, to bottom, 90deg, etc*/
-            background-image: linear-gradient(to bottom #FFFAF2, #C9BA9E,#A99571);
+            background-image: linear-gradient(to bottom, #FFFAF2, #C9BA9E,#a6813b);
             background-attachment: fixed;
         }
     </style>
