--- a/modulo2/exercícios/ex016/cor03.html
+++ b/modulo2/exercícios/ex016/cor03.html
@@ -10,7 +10,7 @@
 
 <body>
     <main>
-        <h1>Site de exemplo</h1>
+        <h1>Site de exemplo - Lidando com cores</h1>
         <h2>Título 1</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde sunt maiores ducimus dolor temporibus quae voluptates nulla quisquam necessitatibus quo? Quia quas sit earum voluptatibus libero atque dolor officiis maiores.</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga aliquid omnis illum, quo quam ut sequi a recusandae nulla minima quasi repellat delectus necessitatibus hic nisi dolor eius. Officia, veniam!</p>
