--- a/modulo2/exercícios/ex017/fonte02.html
+++ b/modulo2/exercícios/ex017/fonte02.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     
-    <h1>Tipos de Alinhamentos</h1>
+    <h1>Testando de Alinhamentos: center, justify, right, left, entre outros.</h1>
     <h2>Subtítulo</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci id a totam quis facere. Incidunt quisquam officia vitae laborum iure tempore tempora quo distinctio temporibus dolorum ut nisi, dolore excepturi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam neque facilis reiciendis laboriosam sapiente eveniet sint eum laborum voluptates, aspernatur soluta atque? Cupiditate nihil quia, perferendis maxime obcaecati ab enim. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus, voluptas veniam! Vero officiis quibusdam assumenda, eligendi nostrum voluptatibus cum, esse soluta necessitatibus, quia suscipit quam id? Dolore consequuntur consectetur possimus!</p>
 
