--- a/modulo2/exercícios/ex018/fonte01.html
+++ b/modulo2/exercícios/ex018/fonte01.html
@@ -39,7 +39,7 @@
     </style>
 </head>
 <body>
-    <h1>Título</h1>
+    <h1>Importando fontes online e baixadas</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque eveniet, iure esse, hic adipisci est quia facilis corporis architecto illum provident quae blanditiis, in tempore consequuntur quaerat rerum praesentium! Illo! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, quod maiores ad rem sapiente architecto saepe minus maxime error voluptatum explicabo ab quibusdam commodi? Placeat obcaecati nihil adipisci debitis consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum deserunt nobis ad optio voluptatibus necessitatibus saepe fugit nemo. Maxime fugit sit tempore animi iusto culpa quos similique asperiores, officiis nihil. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus ipsam numquam temporibus eum, nam iure illum, velit cupiditate, quos voluptate enim nobis quaerat magnam rem sapiente amet est facere ad!</p>
 
     <h2>Título 2</h2>
