--- a/modulo2/exercícios/ex019/seletor01.html
+++ b/modulo2/exercícios/ex019/seletor01.html
@@ -12,7 +12,7 @@
     <main>
         <h1 id="principal"><br>Criando sites com HTML e CSS<br><br></h1>
         <br>
-        <h1>Aprendendo HTML</h1>
+        <h1>Seletores de CSS (Classe, ID)</h1>
 
         <h2 class="basico">HMTL básico</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus facilis ullam praesentium cum ut dolore excepturi consectetur consequuntur inventore, porro totam nisi molestiae. Tempora aperiam, voluptas illo odio repudiandae aliquid. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia vel eaque repellat perspiciatis impedit libero voluptas. Soluta sint ullam quidem harum assumenda recusandae rem, vero dolore error praesentium quis totam? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus fugiat sed praesentium odit id eos autem. Adipisci, deserunt tempore quae officiis nemo quas pariatur eum quis dolore porro cupiditate. Illo.</p>
