--- a/modulo2/exercícios/ex020/pseudoclasses.html
+++ b/modulo2/exercícios/ex020/pseudoclasses.html
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-
+    <h1>Estudando Pseudoclasses</h1>
     <a href="pseudoclassesp02.html"><div id="d1">01</div></a>
     <div id="d2">02</div>
     <div id="d3">03</div>
