--- a/modulo1/exercicios/EX 014 CSS Inline/index.html
+++ b/modulo1/exercicios/EX 014 CSS Inline/index.html
@@ -8,6 +8,7 @@
     <!--Considerado o mais 'fraquinho', mistura conteúdo e estilo-->
 </head>
 <body style="background-color: rgb(54, 53, 53) ; font-family:Verdana, Geneva, Tahoma, sans-serif"> <!-- <-- Inline <-- -->
+    <h1>CSS inline</h1>
     <h1 style="color:coral">Hellou</h1> <!--Limitado, muda apenas a tag selecionada-->
     <h2>Lets talk</h2>
     <p style="text-align:justify ;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic aperiam optio tenetur quam voluptate neque eveniet odit, autem perspiciatis quidem quos? Quisquam laudantium a temporibus laboriosam possimus natus incidunt et.</p>
