--- a/modulo1/exercicios/EX 016 CSS Externo/index.html
+++ b/modulo1/exercicios/EX 016 CSS Externo/index.html
@@ -14,7 +14,8 @@
     </style>
     </style>
 </head>
-<body> 
+<body>
+    <h1>CSS Externo</h1>
     <h1>Hellou</h1>
     <h2>Lets talk</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic aperiam optio tenetur quam voluptate neque eveniet odit, autem perspiciatis quidem quos? Quisquam laudantium a temporibus laboriosam possimus natus incidunt et.</p>
