--- a/modulo1/desafios/d005/index.html
+++ b/modulo1/desafios/d005/index.html
@@ -14,14 +14,14 @@
 
     <img src="Imagens/foto-perfil.png" alt="Foto de Perfil">
 
-    <p>Meu nome é <strong>Bruna Gafo</strong>, sou formada em farmácia (2022) mas atualmente estou estudando desenvolvimento de sistemas para atuar nessa nova área. Estou aprendendo <abbr title="HYPERTEXT MARKUP LANGUAGE 5">HTML5 </abbr> e <abbr title="CASCADING STYLE SHEET 3">CSS3</abbr>. Estou apenas começando, mas pretendo chegar bem longe.</p>
+    <p>Meu nome é <strong>Bruna</strong>, sou formada em farmácia (2022) mas atualmente estou estudando desenvolvimento de sistemas para atuar nessa nova área. Estou aprendendo <abbr title="HYPERTEXT MARKUP LANGUAGE 5">HTML5 </abbr> e <abbr title="CASCADING STYLE SHEET 3">CSS3</abbr>. Estou apenas começando, mas pretendo chegar bem longe.</p>
 
     <h2>Como falar comigo?</h2>
 
     <ul>
-        <li><img src="Imagens/icone-instagram.png" alt="Ícone do Instagram"><a href="https://www.instagram.com/insipda/" target="_blank">/insipda</a> - Me segue lá no instagram</li>
-        <li><img src="Imagens/icone-facebook.png" alt="Ícone do Facebook"><a href="https://www.facebook.com/brunagafo/" target="blank">/brunagafo</a> - Me acompanha lá no Facebook</li>
-        <li><img src="Imagens/icone-linkedin.png" alt="Ícone do Linkedin"><a href="https://www.linkedin.com/in/brunagafo/" target="_blank">/brunagafo</a> - Me adiciona lá no Linkedin</li>
+        <li><img src="Imagens/icone-instagram.png" alt="Ícone do Instagram"><a href="#" target="_blank">/usuário</a> - Me segue lá no instagram</li>
+        <li><img src="Imagens/icone-facebook.png" alt="Ícone do Facebook"><a href="#" target="blank">/usuário</a> - Me acompanha lá no Facebook</li>
+        <li><img src="Imagens/icone-linkedin.png" alt="Ícone do Linkedin"><a href="https://www.linkedin.com/in/brunagafo/" target="_blank">/usuário</a> - Me adiciona lá no Linkedin</li>
 
 
     </ul>
