voltando aside projeto original
Voltando a 1 coluna como no projeto original

--- a/modulo2/desafios/d10/index.html
+++ b/modulo2/desafios/d10/index.html
@@ -76,8 +76,7 @@
             <p>
             Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema <span class="palavra">Android</span> e seu simpático mascote.
             </p>
-        </article>
-        <aside>
+            <aside id="quadro">
             <h3>Quer aprender mais?</h3>
             <p>
             Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem
@@ -106,6 +105,8 @@
                 sistema Android.
             </p>
         </aside>
+        </article>
+
     </main>
 
     <footer>
