--- a/modulo2/desafios/d12/index.html
+++ b/modulo2/desafios/d12/index.html
@@ -7,55 +7,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel de Ode</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="imagens/favicon1.ico" type="image/x-icon">
 </head>
 
 <body>
-
-    <main>
+    <header>
         <h1>Segue o teu destino</h1>
+        <p>Por Ricardo Reis (Pseudônimo de Fernando Pessoa)</p>
+    </header>
+    <main>
+        <section class="normal">
+            <p>
+                Segue o teu destino,<br>
+                Rega as tuas plantas,<br>
+                Ama as tuas rosas.<br>
+                O resto é a sombra<br>
+                De árvores alheias.<br>
+            </p>
+        </section>
 
-        <p>
-            Segue o teu destino,
-            Rega as tuas plantas,
-            Ama as tuas rosas.
-            O resto é a sombra
-            De árvores alheias.
-        </p>
+    
+        <section class="imagem" id="primeira">
+            <p>
+                A realidade<br>
+                Sempre é mais ou menos<br>
+                Do que nos queremos.<br>
+                Só nós somos sempre<br>
+                Iguais a nós próprios.<br>
+            </p>
+        </section>
 
-        <p>
-            A realidade
-            Sempre é mais ou menos
-            Do que nos queremos.
-            Só nós somos sempre
-            Iguais a nós próprios.
-        </p>
+        <section class="normal">
+            <p>
+                Suave é viver só.<br>
+                Grande e nobre é sempre<br>
+                Viver simplesmente.<br>
+                Deixa a dor nas aras<br>
+                Como ex-voto aos deuses.<br>
+               </p>
+            <p> 
+                Vê de longe a vida.<br>
+                Nunca a interrogues.<br>
+                Ela nada pode<br>
+                Dizer-te. A resposta<br>
+                Está além dos deuses.<br>
+            </p>
+        </section>
 
-        <p>
-            Suave é viver só.
-            Grande e nobre é sempre
-            Viver simplesmente.
-            Deixa a dor nas aras
-            Como ex-voto aos deuses.
-        </p>
+        <section class="imagem" id="segunda">
+            <p>
+                Mas serenamente<br>
+                Imita o Olimpo<br>
+                No teu coração.<br>
+                Os deuses são deuses<br>
+                Porque não se pensam.<br>
+            </p>
+        </section>
 
-        <p>
-            Vê de longe a vida.
-            Nunca a interrogues.
-            Ela nada pode
-            Dizer-te. A resposta
-            Está além dos deuses.
-        </p>
-
-        <p>
-            Mas serenamente
-            Imita o Olimpo
-            No teu coração.
-            Os deuses são deuses
-            Porque não se pensam.
-        </p>
-
-        Odes de Ricardo Reis (Pseudônimo de Fernando Pessoa)
+        <aside>(Obra de Domínio Público)</aside>
     </main>
 </body>
-
+<footer>
+    <p>Site criado por <a href="https://github.com/brunagafo/" target="_blank">Bruna Gafo</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">Curso em Vídeo</a></p>
+</footer>
 </html>
