--- a/modulo2/desafios/d10/index.html
+++ b/modulo2/desafios/d10/index.html
@@ -12,14 +12,14 @@
 
 <body>
     <header>
-        <h1>Curiosidades de Tecnologia</h1>
-        <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</p>
+        <h1>Curiosidades na Tecnologia</h1>
+        <p>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar!</p>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Notícias</a>
+            <a href="#">Contato</a>
+        </nav>
     </header>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Notícias</a>
-        <a href="#">Contato</a>
-    </nav>
     <main>
         <article>
             <h1>História do Mascote do Android</h1>
@@ -30,8 +30,8 @@
             </p>
             <h2>A primeira versão</h2>
             <p>
-                A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="#" target="_blank">Dan Morrill &#x1F4CE</a>. Ele
-                conta que abriu o <a href="#" target="_blank">Inkscape &#x1F4CE</a> (software livre para vetorização de imagens) e criou sua própria versão de robô.
+                A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank">Dan Morrill</a>. Ele
+                conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô.
                 O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da
                 empresa para a criação de um mascote.
             </p>
@@ -47,7 +47,7 @@
             <h2>Surge um novo mascote</h2>
             <p>
                 A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora
-                Russa <a href="#" target="_blank">Irina Blok &#x1F4CE</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira
+                Russa <a href="https://www.irinablok.com/android" target="_blank">Irina Blok</a>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira
                 mais agradável.
             </p>
 
@@ -101,7 +101,7 @@
             <p>
                 Infelizmente, o <span class="palavra">Android Q</span> não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar
                 numerações, o que deu origem ao <span class="palavra">Android 10</span>.
-                Acesse aqui o site <a href="#">Android History &#x1F4CE</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o
+                Acesse aqui o site <a href="https://www.android.com/intl/en_uk/history/#/donut">Android History</a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o
                 sistema Android.
             </p>
         </aside>
@@ -110,7 +110,7 @@
     </main>
 
     <footer>
-        <p>Produzido por <a href="#" target="_blank">Bruna Gafo</a> para o <a href="#" target="_blank">CursoemVideo</a></p>
+        <p>Produzido por <a href="https://github.com/brunagafo/" target="_blank">Bruna Gafo</a> para o <a href="https://www.cursoemvideo.com/" target="_blank">CursoemVideo</a></p>
     </footer>
 </body>
 
