exercícios tabelas mod 3

--- a/modulo3/desafios/d13b/tabela01.html
+++ b/modulo3/desafios/d13b/tabela01.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <table>
-        <caption>TABELA DE DESAFIO PARTE 1</caption>
+        <caption>TABELA DE DESAFIO A</caption>
             <tr>
                 <td>1</td>
                 <td>2</td>
