--- a/modulo3/desafios/d13b/tabela02.html
+++ b/modulo3/desafios/d13b/tabela02.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <table>
-        <caption>TABELA DE DESAFIO PARTE 2</caption>
+        <caption>TABELA DE DESAFIO B</caption>
         <tr>
             <td colspan="4">A</td>
             <td rowspan="4">B</td>
