--- a/modulo4/ex0024/iframe003b.html
+++ b/modulo4/ex0024/iframe003b.html
@@ -31,17 +31,13 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam natus aspernatur, fugiat doloribus non eius fugit quam sed atque nisi cumque voluptates repellendus, reprehenderit alias recusandae saepe iusto exercitationem totam! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto eveniet, id repudiandae praesentium incidunt voluptates blanditiis suscipit voluptatibus officiis dolores mollitia accusamus vitae repellendus molestias itaque ullam possimus aliquid a.</p>
 
-    <iframe  name="frame" src="pag-extras/pag001.html"> <!--a src permite que o iframe não seja carregado vazio ao abrir a pag-->
-        [Infelizmente seu navegador não é compatível com esse conteúdo]
+    <iframe  name="frame" srcdoc="<h1> Escolha um das opções acima</h1> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur magni necessitatibus illum voluptates, incidunt fugiat sunt distinctio ex ipsum, nemo iusto, eum perferendis aut quisquam! Placeat doloremque fuga consequatur officia.lore Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, sequi</p> <img src='imagens/css3-plain.png'>"> 
+        
+    <!--O srcdoc permite que o iframe não seja carregado vazio ao abrir a pag, mas com texto/msg-->
+
     </iframe>
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi dolore itaque tenetur quos. Voluptatem molestiae qui blanditiis dignissimos aut aliquid quis atque nam, asperiores doloremque quisquam illo officia, autem maiores. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas eligendi sint quidem quia, a illo hic impedit corporis natus suscipit laboriosam deserunt temporibus aspernatur provident iste veritatis labore quae earum.</p>
-
-    <!-- <iframe  name="frame" srcdoc="<h1> Escolha um das opções acima<h1> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur magni necessitatibus illum voluptates, incidunt fugiat sunt distinctio ex ipsum, nemo iusto, eum perferendis aut quisquam! Placeat doloremque fuga consequatur officia.lore Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, sequi</p> "> 
-        
-        O srcdoc permite que o iframe não seja carregado vazio ao abrir a pag, mas com texto/msg
-
-    </iframe>-->
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur magni necessitatibus illum voluptates, incidunt fugiat sunt distinctio ex ipsum, nemo iusto, eum perferendis aut quisquam! Placeat doloremque fuga consequatur officia.lore Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, sequi. Sapiente nemo, hic neque, quae quos dolor perspiciatis eos rem voluptates numquam nobis dignissimos a sunt ipsam sint animi ipsa.</p>
 
