--- a/modulo4/desafios/d13/index.html
+++ b/modulo4/desafios/d13/index.html
@@ -5,10 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Redes Sociais</title>
-    <link rel="stylesheet" href="/estilos/style.css">
+    <link rel="stylesheet" href="estilos/style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    
+    <main>
+        <section id="smartphone">
+           <iframe src="home.html" name="tela" id="tela"  frameborder="0">[ Seu navegador não é compatível com esse conteúdo :( ]</iframe>
+        </section>
+        <section id="ref">
+            <p>Projeto personalizado. Versão original em <a href="https://professorguanabara.github.io/projeto-social/" target="
+                ">Curso em Vídeo</a>. </p>
+        </section>
+        <section id="redes-sociais">
+            <a href="home.html" target="tela"><img src="imagens/logo-home.png" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/github-original.png" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/linkedin-plain.png" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.png" alt=""></a>
+        </section>
+    </main>
+
 </body>
 </html>
