--- a/modulo4/desafios/d13/index.html
+++ b/modulo4/desafios/d13/index.html
@@ -19,9 +19,9 @@
         </section>
         <section id="redes-sociais">
             <a href="home.html" target="tela"><img src="imagens/logo-home.png" alt=""></a>
-            <a href="#" target="tela"><img src="imagens/github-original.png" alt=""></a>
-            <a href="#" target="tela"><img src="imagens/linkedin-plain.png" alt=""></a>
-            <a href="#" target="tela"><img src="imagens/logo-instagram.png" alt=""></a>
+            <a href="github.html" target="tela"><img src="imagens/github-original.png" alt=""></a>
+            <a href="linkedin.html" target="tela"><img src="imagens/linkedin-plain.png" alt=""></a>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.png" alt=""></a>
         </section>
     </main>
 
