--- a/modulo4/exercicios/ex0025/form003.html
+++ b/modulo4/exercicios/ex0025/form003.html
@@ -41,6 +41,9 @@
             <label for="ihora">Hora:</label>
             <input type="time" name="hora" id="ihora" required>
         </div>
+
+        <!--Controles de formulário podem ser ignorados por navegadores como o safari (apple) que permitem letras em types como hora e data-->
+
         <div>
         <input type="reset" value="Limpar">
         <input type="submit" value="Enviar">
