--- a/modulo4/exercicios/ex0025/form002.html
+++ b/modulo4/exercicios/ex0025/form002.html
@@ -12,7 +12,7 @@
             padding-top: 20px;
         }
     </style>
-    <title>Formulários</title>
+    <title>Texto e Senha</title>
 </head>
 <body>
     <h1>Teste de formulário</h1>
