--- a/modulo4/exercicios/ex0025/form004.html
+++ b/modulo4/exercicios/ex0025/form004.html
@@ -19,13 +19,13 @@
 </head>
 
 <body>
-    <h1>Exemplo de formulário</h1>
-    <form action="cadastro.php">
+    <h1>Telefone e E-mail</h1>
+    <form action="cadastro.php" autocomplete="on">
         <fieldset>
             <legend>Dados Pessoais</legend>
             <div>
                 <label for="iemail">E-mail:</label>
-                <input type="email" name="email" id="iemail" required>
+                <input type="email" name="email" id="iemail" required autocomplete="email">
             </div>
             <div>
                 <label for="itel">Telefone:</label>
